<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quizzie</string>
	<string name="developer_name">Developer: Patrick Leopard II</string>
	<string name="legalText">Quizzie 2014</string>
    <string name="action_settings">Settings</string>
    <string name="difficulty">Difficulty</string>
    <string name="gameType">Game Type</string>
    <string name="go">Go!</string>
    <string name="score">Score</string>
    <string name="multiplier">Multiplier</string>
    <string name="streak">Streak</string>
    <string name="startScore">0</string>
    <string name="startMultiplier">x1</string>
    <string name="startStreak">0</string>
    <string name="answer0">Answer 1</string>
    <string name="answer1">Answer 2</string>
    <string name="answer2">Answer 3</string>
    <string name="answer3">Answer 4</string>
    <string name="questionPlaceholder">Get Ready!</string>
    <string name="gameSummary">Game Summary</string>
    <string name="newGame">New Game</string>
    
    <color name="lightblue">#6766CC</color>
    <color name="darkblue">#0C4EA5</color>
    <color name="darkerblue">#1266B2</color>
    <color name="green">#9CB200</color>
    <color name="red">#FF0D00</color>
    <color name="orange">#FF6C00</color>
    <color name="white">#FFFFFF</color>
    <color name="black">#AA000000</color>

</resources>
