<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.finalproject.MainActivity"
    tools:ignore="MergeRootFrame" >

    <ImageView
        android:id="@+id/logoImageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:padding="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/quizzie_logo" />

    <TextView
        android:id="@+id/gameSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoImageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/gameSummary"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/scoreTextView"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/gameSummary"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@color/orange"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/answer2"
        android:textColor="@color/white" />

    <View
        android:id="@+id/scoreRule"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/scoreTextView"
        android:layout_margin="15dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/streakTextView"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/scoreRule"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@color/green"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/answer2"
        android:textColor="@color/white" />

    <View
        android:id="@+id/separatorRule"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/streakTextView"
        android:layout_margin="3dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/newGameTextView"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/separatorRule"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@color/darkblue"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:text="@string/newGame"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/legalText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:text="@string/legalText" />

</RelativeLayout>