<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.finalproject.MainActivity"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:id="@+id/questionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"
        android:text="TextView"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/radioAnswers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/radioButton0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Answer1" />

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Answer2" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Answer 3" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Answer4" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/pointsDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false" >

        <RelativeLayout
            android:id="@+id/multiplier"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:background="@color/lightblue" >

            <TextView
                android:id="@+id/multiplierLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"
                android:text="@string/multiplier" />

            <TextView
                android:id="@+id/multiplierTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/multiplierLabel"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"
                android:text="@string/startMultiplier" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:background="@color/orange" >

            <TextView
                android:id="@+id/scoreLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"
                android:text="@string/score" />

            <TextView
                android:id="@+id/scoreTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/scoreLabel"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"
                android:text="@string/startScore" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/streak"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:background="@color/green" >

            <TextView
                android:id="@+id/streakLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"
                android:text="@string/streak" />
            
            <TextView
                android:id="@+id/streakTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/streakLabel"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"
                android:text="@string/startStreak" />

         

        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        	android:id="@+id/timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:background="@color/lightblue"
             >
    <ProgressBar
        android:id="@+id/timerBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
     />
    </RelativeLayout>

</RelativeLayout>